<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activities.HomeActivity">

    <TextView
        android:id="@+id/heading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/you_ai_assistant"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/biggest"
        android:textColor="@color/blue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toTopOf="@id/message"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="40dp"
        android:layout_marginEnd="40dp"
        android:layout_marginTop="10dp"
        android:text="@string/sub_heading"
        android:gravity="center"
        android:fontFamily="@font/nunito_medium"
        android:textSize="@dimen/small"
        android:textColor="@color/grayText"/>

<!--    <ImageView-->
<!--        android:layout_width="320dp"-->
<!--        android:layout_height="320dp"-->
<!--        android:src="@drawable/frame"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@id/message"-->
<!--        android:layout_marginTop="50dp"/>-->

    <Button
        android:id="@+id/ask_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        app:layout_constraintTop_toBottomOf="@id/message"
        android:text="@string/ask_question"
        android:fontFamily="@font/nunito_bold"
        android:textSize="@dimen/big"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:backgroundTint="@color/blue"
        android:drawableEnd="@drawable/round_arrow"/>

</androidx.constraintlayout.widget.ConstraintLayout>