<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".Activities.ChatActivity">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardElevation="5dp"
        app:cardBackgroundColor="@color/white">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="20dp">

            <ImageView
                android:id="@+id/back"
                android:layout_width="24dp"
                android:layout_height="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/back"/>

            <ImageView
                android:id="@+id/robot"
                android:layout_width="24dp"
                android:layout_height="36dp"
                android:src="@drawable/robot"
                app:layout_constraintStart_toEndOf="@id/back"
                android:layout_marginStart="20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"/>

            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@id/robot"
                android:layout_marginStart="20dp"
                android:text="@string/app_name"
                android:textColor="@color/blue"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/bigger"/>

            <TextView
                android:id="@+id/online"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/name"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@id/moon"
                android:layout_marginStart="5dp"
                android:text="@string/online"
                android:textColor="@color/green"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/big" />

           <ImageView
               android:id="@+id/moon"
               android:layout_width="6dp"
               android:layout_height="6dp"
               android:src="@drawable/new_moon"
               app:layout_constraintTop_toTopOf="@id/online"
               app:layout_constraintBottom_toBottomOf="@id/online"
               app:layout_constraintEnd_toStartOf="@id/online"
               app:layout_constraintStart_toEndOf="@id/robot"
               android:layout_marginStart="20dp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:visibility="gone"
            tools:listitem="@layout/bot_layout"/>

        <LinearLayout
            android:id="@+id/instruct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="visible">
            
            <ImageView
                android:layout_width="28dp"
                android:layout_height="28dp"
                android:src="@drawable/instructions"
                android:layout_marginTop="30dp"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/instructions"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:fontFamily="@font/nunito_bold"
                android:textSize="@dimen/smaller"
                android:textColor="@color/black2"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/instructs"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1_write_a_question"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="@dimen/smaller"
                    android:textColor="@color/black2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/instructs"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_2_provide_the_category_and_sub_category"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="@dimen/smaller"
                    android:textColor="@color/black2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/instructs"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/topic"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="@dimen/smaller"
                    android:textColor="@color/black2"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/instructs"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:layout_marginTop="10dp"
                android:padding="10dp"
                android:gravity="center">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/location"
                    android:fontFamily="@font/nunito_regular"
                    android:textSize="@dimen/smaller"
                    android:textColor="@color/black2"/>

            </LinearLayout>
            
        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="30dp"
            app:cardElevation="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="20dp">

                <EditText
                    android:id="@+id/edit_question"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toStartOf="@id/send"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginEnd="10dp"
                    android:background="@drawable/chat_edit_text"
                    android:hint="@string/write_you_question"
                    android:fontFamily="@font/nunito_bold"
                    android:textSize="@dimen/smallest"
                    android:textColorHint="@color/grayText2"
                    android:textColor="@color/blue"
                    android:inputType="text"/>

                <ImageView
                    android:id="@+id/send"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@drawable/round_send_24"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>


    </androidx.constraintlayout.widget.ConstraintLayout>

<!--    <ScrollView-->
<!--        android:layout_width="match_parent"-->
<!--        android:layout_height="match_parent"-->
<!--        android:layout_marginEnd="0dp"-->
<!--        android:layout_marginBottom="10dp"-->
<!--        android:fadeScrollbars="true"-->
<!--        android:scrollbars="none"-->
<!--        android:padding="20dp">-->

<!--        <RelativeLayout-->
<!--            android:layout_width=""-->
<!--            android:layout_height=""-->

<!--    </ScrollView>-->

</LinearLayout>